@@ -16,32 +16,51 @@
  * along with Applied Energistics 2.  If not, see <http://www.gnu.org/licenses/lgpl>.
  */
 
+buildscript {
+    repositories {
+        maven { url = 'https://maven.minecraftforge.net' }
+        maven { url = 'https://repo.spongepowered.org/maven' }
+        mavenCentral()
+    }
+    dependencies {
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
+        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
+    }
+}
+
 plugins {
-    id 'fabric-loom' version '0.10-SNAPSHOT'
-    id 'maven-publish'
+    id "maven-publish"
     id "com.diffplug.spotless" version "5.12.4"
     id "com.matthewprenger.cursegradle" version "1.4.0"
     id "com.modrinth.minotaur" version "1.2.1"
-    id 'io.github.juuxel.loom-quiltflower-mini' version '1.2.1'
+    id "idea"
 }
 
+apply plugin: 'net.minecraftforge.gradle'
+apply plugin: 'org.spongepowered.mixin'
+apply plugin: "eclipse"
+
+// All jar files from this folder will be added automatically as runtime mod dependencies
+def extraModsDir = "extra-mods-${minecraft_version}"
+
 repositories {
+    flatDir {
+        name "extra-mods"
+        dir file(extraModsDir)
+    }
     mavenLocal()
     mavenCentral()
-    maven {
-        url "https://maven.shedaniel.me/"
-        content {
-            includeGroup "me.shedaniel"
-            includeGroup "me.shedaniel.cloth"
-            includeGroup "dev.architectury"
-        }
+    maven { // modmaven, maven proxy
+        name 'modmaven'
+        url "https://modmaven.dev/"
     }
     maven {
-        url "https://maven.bai.lol"
+        url "https://www.cursemaven.com"
         content {
-            includeGroup "mcp.mobius.waila"
+            includeGroup "curse.maven"
         }
     }
+    maven { url = 'https://repo.spongepowered.org/maven' }
     maven {
         url "https://maven.parchmentmc.net/"
         content {
@@ -51,33 +70,26 @@ repositories {
 }
 
 dependencies {
-    // To change the versions see the gradle.properties file
-    minecraft "com.mojang:minecraft:${project.minecraft_version}"
-    mappings loom.layered() {
-        officialMojangMappings()
-        parchment("org.parchmentmc.data:parchment-1.17.1:2021.12.12@zip")
-    }
+    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
 
-    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+    // compile against provided APIs
+    compileOnly "mezz.jei:jei-${jei_minecraft_version}:${jei_version}:api"
+    compileOnly "curse.maven:the-one-probe-245211:3550084"
+    compileOnly "curse.maven:jade-324717:3551337"
 
-    modImplementation("me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}") {
-        exclude group: "net.fabricmc.fabric-api"
-    }
+    // Runtime, Mods
+    runtimeOnly fg.deobf("mezz.jei:jei-${jei_minecraft_version}:${jei_version}")
+    runtimeOnly fg.deobf("curse.maven:jade-324717:3551337")
 
-    modCompileOnly("mcp.mobius.waila:wthit-api:fabric-${project.wthit_version}") {
-        exclude group: "net.fabricmc.fabric-api"
+    // Locally sourced extra mods for runtime (i.e. testing)
+    for (extraModJar in fileTree(dir: extraModsDir, include: '*.jar')) {
+        def basename = extraModJar.name.substring(0, extraModJar.name.length() - ".jar".length())
+        def versionSep = basename.lastIndexOf('-')
+        assert versionSep != -1
+        def artifactId = basename.substring(0, versionSep)
+        def version = basename.substring(versionSep + 1)
+        runtimeOnly fg.deobf("extra-mods:$artifactId:$version")
     }
-    modRuntimeOnly("mcp.mobius.waila:wthit:fabric-${project.wthit_version}") {
-        exclude group: "net.fabricmc.fabric-api"
-    }
-
-    // Fabric API. This is technically optional, but you probably want it anyway.
-    modImplementation("net.fabricmc.fabric-api:fabric-api:${project.fabric_version}")
-    include modImplementation("teamreborn:energy:${project.tr_energy_version}") {
-        exclude group: "net.fabricmc.fabric-api"
-    }
-
-    implementation 'com.google.code.findbugs:jsr305:3.0.2'
 
     // unit test dependencies
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.8.1")
@@ -89,8 +101,9 @@ dependencies {
     testImplementation("org.mockito:mockito-junit-jupiter:4.0.0")
     testImplementation("org.mockito:mockito-inline:4.0.0")
 
+    // Annotation Processors
+    annotationProcessor 'org.spongepowered:mixin:0.8.4:processor'
 }
-
 group = artifact_group
 archivesBaseName = artifact_basename
 
@@ -124,11 +137,11 @@ if (ext.branch) {
 
 ext.tag = System.getenv('TAG') ?: ""
 if (ext.tag) {
-    if (!ext.tag.startsWith("fabric/v")) {
-        throw new GradleException("Tags for the fabric version should start with fabric/: ${ext.tag}")
+    if (!ext.tag.startsWith("forge/v")) {
+        throw new GradleException("Tags for the forge version should start with forge/: ${ext.tag}")
     }
 
-    version = ext.tag.substring("fabric/v".length())
+    version = ext.tag.substring("forge/v".length())
     // Validate that the rest is a semver version
     if (version ==~ /^(0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(?:-((?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\.(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?$/) {
         if (System.getenv("GITHUB_ENV")) {
@@ -144,23 +157,12 @@ ext.isAlpha = project.version.contains("alpha")
 ext.isBeta = project.version.contains("beta")
 
 sourceSets {
-    portaforgy
     main {
-        compileClasspath += sourceSets.portaforgy.output
-        runtimeClasspath += sourceSets.portaforgy.output
         resources {
             srcDir 'src/generated/resources'
         }
     }
-    test {
-        compileClasspath += sourceSets.portaforgy.output
-        runtimeClasspath += sourceSets.portaforgy.output
-    }
     crowdin
-}
-
-configurations {
-    portaforgyImplementation.extendsFrom(compileClasspath)
 }
 
 test {
@@ -172,54 +174,80 @@ dependencies {
     crowdinImplementation 'com.google.code.gson:gson:2.8.9'
 }
 
-////////////////////
-// Forge/Minecraft
-loom {
-    accessWidenerPath = file("src/main/resources/ae2.accesswidener")
-
-    runs {
-        client {
-            programArgs "--username", "AE2Dev"
-            property "appeng.tests", "true"
-        }
-        datagen {
-            client()
-            source "main"
-            property "appeng.generateData", "true"
-            property "appeng.generateData.outputPath", file("src/generated/resources").absolutePath
-            property "appeng.generateData.existingData", file("src/main/resources").absolutePath
-        }
-
-        // Use to run the tests
-        gametest {
-            server()
-            name "Game Test"
-            property "appeng.tests", "true"
-            vmArg "-Dfabric-api.gametest"
-            runDir "build/gametest"
-            source sourceSets.test
+/**
+ * Configures properties common to all run configurations
+ */
+def commonRunProperties = {
+    workingDirectory project.file('run')
+    property 'forge.logging.console.level', 'debug'
+    property 'fml.earlyprogresswindow', 'false'
+    property 'appeng.tests', 'true'
+    jvmArgs "--add-opens", "java.base/sun.security.util=ALL-UNNAMED"
+    jvmArgs "--add-opens", "java.base/java.util.jar=ALL-UNNAMED"
+    // See https://github.com/Vazkii/Patchouli#mixin-troubleshooting
+    property 'mixin.env.remapRefMap', 'true'
+    property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
+    // property "mixin.debug.export", "true"
+    mods {
+        appliedenergistics2 {
+            source sourceSets.main
         }
     }
 }
 
-// For reproducible results, the world should be deleted before each run
-task cleanGametestWorld(type: Delete) {
-    delete "build/gametest"
+////////////////////
+// Forge/Minecraft
+minecraft {
+    mappings channel: 'official', version: project.minecraft_version
+
+    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
+
+    runs {
+        client {
+            with commonRunProperties
+        }
+        server {
+            with commonRunProperties
+        }
+        data {
+            with commonRunProperties
+            // ForgeGradle will just force-exit the Gradle Daemon which fails our builds in case
+            // a daemon is used for any reason.
+            forceExit false
+            args '--mod', 'ae2', '--all', '--output', file('src/generated/resources/'), "--existing", file("src/main/resources")
+        }
+        // Use to run the tests
+        gametest {
+            parent server
+            with commonRunProperties
+            workingDirectory "build/gametest"
+        }
+    }
 }
-tasks.runGametest.dependsOn cleanGametestWorld
+
+///////////
+// Mixins
+mixin {
+    add sourceSets.main, "ae2.mixins.refmap.json"
+}
 
 //////////////
 // Artifacts
 processResources {
     exclude '.cache'
 
-    filesMatching("fabric.mod.json") {
-        expand "version": project.version
+    filesMatching("META-INF/mods.toml") {
+        expand 'minecraft_version': project.minecraft_version_range, 'forge_version': project.forge_version_range,
+            'jei_version': project.jei_version_range, 'top_version': project.top_version_range,
+                'jade_version': project.jade_version_range
+        filter { line ->
+            line.replace('version="0.0.0"', "version=\"$version\"")
+        }
     }
 }
 
 jar {
-    finalizedBy 'remapJar'
+    finalizedBy 'reobfJar'
 
     from sourceSets.main.output.classesDirs
     from sourceSets.main.output.resourcesDir
@@ -258,12 +286,10 @@ task javadocJar(type: Jar, dependsOn: javadoc, group: "build") {
     archiveClassifier = "javadoc"
     from javadoc.destinationDir
 }
-// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-// if it is present.
-// If you remove this task, sources will not be generated.
-task sourcesJar(type: Jar, dependsOn: classes) {
+
+task sourcesJar(type: Jar) {
     archiveClassifier = "sources"
-    from sourceSets.main.allSource
+    from sourceSets.main.allJava
 }
 
 task apiJar(type: Jar, group: "build") {
@@ -283,23 +309,22 @@ artifacts {
 //////////////////
 // Maven publish
 publishing {
-    if (!version.endsWith("-SNAPSHOT")) {
-        publications {
-            maven(MavenPublication) {
-                groupId = project.group
-                artifactId = 'appliedenergistics2-fabric'
-                version = project.version
+    publications {
+        maven(MavenPublication) {
+            groupId = project.group
+            artifactId = project.archivesBaseName
+            version = project.version
 
-                // add all the jars that should be included when publishing to maven
-                artifact(remapJar) {
-                    builtBy remapJar
-                }
-                artifact(sourcesJar) {
-                    builtBy remapSourcesJar
-                }
-                artifact javadocJar
-                artifact apiJar
+            // ForgeGradle will generate wild dependency definitions, see https://github.com/MinecraftForge/ForgeGradle/issues/584
+            // Since we don't actually depend on anything, just remove the entire node.
+            pom.withXml {
+                asNode().remove(asNode().dependencies)
             }
+
+            from components.java
+            artifact sourcesJar
+            artifact javadocJar
+            artifact apiJar
         }
     }
     repositories {
@@ -345,6 +370,7 @@ spotless {
 }
 
 import com.modrinth.minotaur.TaskModrinthUpload
+import com.modrinth.minotaur.request.VersionType
 
 ////////////////
 // Crowdin
@@ -385,24 +411,16 @@ if (System.getenv("CURSEFORGE") && !version.endsWith("-SNAPSHOT") && project.ver
             changelog = System.getenv("CHANGELOG") ?: "Please visit our [releases](https://github.com/AppliedEnergistics/Applied-Energistics-2/releases) for a changelog"
             releaseType = cfReleaseType
             addGameVersion project.minecraft_version
-            addGameVersion "Fabric"
-            mainArtifact(remapJar.archiveFile) {
-                displayName = "AE2 ${project.version} [FABRIC]"
+            addGameVersion "Forge"
+            mainArtifact(jar.archiveFile) {
+                displayName = "AE2 ${project.version} [FORGE]"
             }
-        }
-        options {
-            forgeGradleIntegration = false
-        }
-        afterEvaluate {
-            tasks.getByName("curseforge${project.curseforge_project}").dependsOn remapJar
         }
     }
 }
 
 ////////////////
 // Modrinth
-
-import com.modrinth.minotaur.request.VersionType
 
 if (!version.endsWith("-SNAPSHOT") && project.version != "0.0.0") {
     def mrVersionType = VersionType.RELEASE
@@ -420,14 +438,14 @@ if (!version.endsWith("-SNAPSHOT") && project.version != "0.0.0") {
         token = System.getenv("MODRINTH")
         changelog = System.getenv("CHANGELOG") ?: "Please visit our [releases](https://github.com/AppliedEnergistics/Applied-Energistics-2/releases) for a changelog"
         projectId = 'XxWD5pD3'
-        versionName = project.version + " [FABRIC]"
-        versionNumber = "fabric-" + project.version
+        versionName = project.version + " [FORGE]"
+        versionNumber = "forge-" + project.version
         versionType = mrVersionType
-        uploadFile = remapJar
+        uploadFile = jar
         addGameVersion(project.minecraft_version)
-        addLoader('fabric')
+        addLoader('forge')
     }
-    publishModrinth.dependsOn remapJar
+    publishModrinth.dependsOn jar
 }
 
 ////////////////
